--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "diabetes_supplies_portal",
   "version": "0.1.0",
+  "engines": {
+    "node": "v12.12.0"
+  },
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.26",
