--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,6 @@
 {
     "semi": true,
-    "trailingComma": "all",
+    "trailingComma": "es5",
     "singleQuote": true,
     "tabWidth": 4,
     "printWidth": 100
