--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "diabetes_supplies_portal",
     "version": "0.1.0",
+    "homepage": ".",
     "engines": {
         "node": "v12.12.0"
     },
@@ -27,6 +28,9 @@
         "eject": "react-scripts eject",
         "heroku-postbuild": "npm run build"
     },
+    "eslintConfig": {
+        "extends": "react-app"
+    },
     "browserslist": {
         "production": [
             ">0.2%",
@@ -44,7 +48,6 @@
         "@babel/plugin-proposal-class-properties": "^7.8.3",
         "@babel/preset-env": "^7.9.5",
         "@babel/preset-react": "^7.9.4",
-        "babel-loader": "^8.1.0",
         "babel-plugin-import": "^1.13.0",
         "eslint": "^6.8.0",
         "eslint-config-prettier": "^6.10.1",
