updated content security policy

--- a/.gitignore
+++ b/.gitignore
@@ -19,8 +19,8 @@
 .env.production.local
 
 # linters 
-.prettierrc
-.eslintrc.json
+# .prettierrc
+# .eslintrc.json
 
 # project data
 # constants.js
