--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
     "name": "diabetes_supplies_portal",
     "version": "0.1.0",
-    "homepage": ".",
     "engines": {
         "node": "v12.12.0"
     },
@@ -14,11 +13,15 @@
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
-        "node-sass": "^4.13.1",
+        "core-js": "^3.6.5",
+        "fsevents": "^2.1.3",
+        "node-sass": "^4.14.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "react-scripts": "3.3.0",
-        "serve": "^11.3.0"
+        "react-scripts": "3.4.1",
+        "sass": "^1.26.5",
+        "serve": "^11.3.0",
+        "tsutils": "^3.17.1"
     },
     "scripts": {
         "dev": "react-scripts start",
@@ -27,9 +30,6 @@
         "test": "react-scripts test",
         "eject": "react-scripts eject",
         "heroku-postbuild": "npm run build"
-    },
-    "eslintConfig": {
-        "extends": "react-app"
     },
     "browserslist": {
         "production": [
