--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
         "@testing-library/react": "^9.3.2",
         "@testing-library/user-event": "^7.1.2",
         "core-js": "^3.6.5",
-        "node-sass": "^4.14.0",
+        "node-sass": "^5.0.0",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "react-scripts": "3.4.1",
+        "react-scripts": "^4.0.1",
         "sass": "^1.26.5",
-        "serve": "^11.3.0",
+        "serve": "^11.3.2",
         "tsutils": "^3.17.1"
     },
     "scripts": {
